# Looker

./: Cargo.toml  README.md  build.rs  desktop.ini  memo.md
.github/workflows/: lint.yml  release.yml
src/: executor.rs  gallery_manager.rs  main.rs  menu.rs  naming.rs  recommender.rs  record_manager.rs  scanner.rs  structure.rs  structure_manager.rs  ui.rs  utils.rs
