[package]
name = "Looker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.11.0"
chrono = "0.4.38"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
walkdir = "2.5.0"
inquire = "0.7.0"
colored = "2.1.0"
indicatif = "0.17.8"

[build-dependencies]
embed-resource = "2.4.2"